Final changes to course dashboard

--- a/src/screens/course_dashboard_screen.kv
+++ b/src/screens/course_dashboard_screen.kv
@@ -96,6 +96,8 @@ CourseDashboardScreenRoot:
 
                 ScrollView:
                     height: dp(200)
+                    size_hint_x: None
+                    width: root.ids.sv_description_container.width - dp(20)
                     size_hint_y: None
                     do_scroll_x: False
                     do_scroll_y: True
@@ -126,6 +128,8 @@ CourseDashboardScreenRoot:
 
                 ScrollView:
                     height: dp(200)
+                    size_hint_x: None
+                    width: root.ids.sv_description_container.width - dp(20)
                     size_hint_y: None
                     do_scroll_x: False
                     do_scroll_y: True
