--- a/src/screens/edit_course_screen.kv
+++ b/src/screens/edit_course_screen.kv
@@ -31,6 +31,13 @@ EditCourseScreenRoot:
             size_hint: (1.0, None)
             height: dp(40)
 
+        Button:
+            size_hint: (None,None)
+            width: dp(200)
+            height: dp(30)
+            text: 'Remove Course'
+            on_press: root.remove_course_callback()
+
         ScrollView:
             scroll_type: ['content', 'bars']
             bar_margin: dp(2)
