Finished grade entering

--- a/src/screens/add_real_grades_screen.kv
+++ b/src/screens/add_real_grades_screen.kv
@@ -123,6 +123,7 @@ AddRealGradesScreenRoot:
                         size_hint_y: None
                         height: dp(34)
                         text: 'No Sections Exist'
+                        on_text: root.set_course_text_description()
 
                 Label:
                     size_hint_y: None
