Section Stats template

--- a/src/screens/main_screen.kv
+++ b/src/screens/main_screen.kv
@@ -45,7 +45,7 @@ MainScreenRoot:
                 on_press: root.course_dashboard_callback()
 
             Button:
-                text: 'Course Statistics'
+                text: 'View Section Stats'
                 on_press: root.course_stats_callback()
 
             Button:
